--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ axum = "0.7"
 tokio = { version = "1", features = ["full"] }
 askama = "0.12"
 askama_axum = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
