--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,12 @@ askama = "0.12"
 askama_axum = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tower = "0.4"
+tower-http = { version = "0.5", features = ["compression-full", "fs", "trace", "set-header"] }
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+strip = true
+panic = "abort"
