--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower = "0.4"
 tower-http = { version = "0.5", features = ["compression-full", "fs", "trace", "set-header"] }
+pulldown-cmark = "0.11"
+gray_matter = "0.2"
 
 [profile.release]
 opt-level = 3
